[workspace]

members = [
    "common/channel",
    "common/directory",
    "common/hashset_delay",
    "common/lighthouse_metrics",
    "common/merkle_tree",
    "common/task_executor",
    "common/ionian_kv_version",
    "common/unused_port",
    "common/append_merkle",

    "node",
    "node/stream",
    "node/log_entry_sync",
    "node/rpc",
    "node/shared_types",
    "node/storage",
]

[patch.crates-io]
eth2_ssz = { path = "version-meld/eth2_ssz" }
