[workspace]

members = [
    "common/channel",
    "common/lighthouse_metrics",
    "common/merkle_tree",
    "common/task_executor",
    "common/ionian_kv_version",
    "common/append_merkle",

    "node",
    "node/stream",
    "node/log_entry_sync",
    "node/rpc",
    "node/shared_types",
    "node/storage",
    "node/storage_with_stream",
]

[patch.crates-io]
eth2_ssz = { path = "version-meld/eth2_ssz" }
